name:                scalpable
version:             0.0.1.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010
  build-depends:       base >=4.9.0 && <4.10
                     , scalpel >=0.5.1 && <0.7
  exposed-modules:     Text.HTML.Scalpable
